@@ -42,7 +42,7 @@ public class Dashboard {
             System.out.println("No Income sources have been added.");
         } else {
             System.out.println("Latest Income source have been added:");
-            Income lastIncome = user.getIncomeSources().getLast();
+            Income lastIncome = user.getIncomeSources().get(user.getIncomeSources().size() - 1);
             incomeView.displayIncome(lastIncome);
         }
 
@@ -57,7 +57,7 @@ public class Dashboard {
             System.out.println("No Expense sources have been added.");
         } else {
             System.out.println("Latest Expense source have been added:");
-            Expense lastExpense = user.getExpenseRecipients().getLast();
+            Expense lastExpense = user.getExpenseRecipients().get(user.getExpenseRecipients().size() - 1);
             expenseView.displayExpense(lastExpense);
         }
 
@@ -66,7 +66,7 @@ public class Dashboard {
             System.out.println("No Budgets have been added.");
         } else {
             System.out.println("Latest Budget have been added:");
-            Budget lastBudget = user.getBudgets().getLast();
+            Budget lastBudget = user.getBudgets().get(user.getBudgets().size() - 1);
             budgetView.displayBudget(lastBudget);
         }
         System.out.println("========================");
